[package]
name = "axol"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0 OR CC0-1.0"

# Compile with Performance Optimizations:
# https://bevyengine.org/learn/book/getting-started/setup/#compile-with-performance-optimizations

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Remember to revert dynamic linking before releasing your game! Otherwise you will need
# to include libbevy_dylib alongside your game if you want it to run. If you remove the
# "dynamic" feature, your game executable can run standalone.
[dependencies]
bevy = { version="0.12.1", features = [] }
bevy_ecs_ldtk = "0.9.0"
bevy_ecs_tilemap = "0.12.0"

[lints.clippy]
type_complexity = "allow"
too_many_arguments = "allow"

